	  to the hash table if they are public.  This means some 
	  StoreEntry's will be around with null keys.
	- Had to add a flag for using private keys with ICP queries to
	  neighbors.  If any neighbor returns a reqnum field of zero,
	  then disable using private keys.  But still use private
	  keys for things with bypass the ICP query step (such as
	  POST and IMS-GET).
	- eliminated dual logging to stderr/debug_log
	- added 'ftp_user' to config
	- added improved IP ACL routines; now handles netmasks.
	- Added storeEntryValidLength().  Objects with invalid 
	  content lengths will be ejected.
	- Added clean shutdown mode.  On SIGTERM, close incoming and 
	  dnsserver sockets.  When no sockets left in select loop
	  return and exit.
	- Added support for shttp and CONNECT urls.
	- Added support for large POST objects.
	- Started arranging for HUP to re-read config file.
	- Created struct _http_reply to hold reply fields.
	  Elmininates need for storeMatchMime() in ttl.c.
	- fixed use of storeSetPublicKey() in ftp/gopher/wais.  Now
	  call at end of *SendRequest().
	- Fixed converting gopher to HTML bug, removed html_request
	  field of gopherData;
	- Open server sockets _after_ storeRebuild() so many incoming
	  connections don't stack up on the listen queue.
	- Created "store.log" which logs RELEASE/SWAPIN/SWAPOUT events.
	- Added announce to cached; no longer external program.
	- Added ftpProcessReplyHeader() (a twin of the one in http.c).
	- Fixed bad free() in ipcacheShtudownServers()
	- Cleaned up FTP url parsing; support port.
	- SIGHUP reconfigures the cache
	- SIGUSR1 rotates logfiles.
	- New ACLs
	- added dns_positive_ttl
	- Added Forwarded: header to proxy HTTP requests
	- Fixed reqnum bug (was using ntohs instead of ntohl).
	- Fixed double free() bug caused by setting flag=0 in
	  storeAddFromDisk().
	- Fixed memory leaks.
	- Check specifically for tm_gmtoff and set HAVE_TM_GMTOFF
	- Fixed memory problem for colon but no port ("http://foo.com:/")