@@ -17,6 +17,7 @@ extern void setMaxFD _PARAMS((void));
 extern time_t getCurrentTime _PARAMS((void));
 extern void normal_shutdown _PARAMS((void));
 extern void reconfigure _PARAMS((int sig));
+extern int tvSubMsec _PARAMS((struct timeval, struct timeval));
 
 extern int do_mallinfo;
 extern time_t cached_curtime;
